@@ -1100,7 +1100,7 @@ gaim_request_field_account_get_filter(const GaimRequestField *field)
 void *
 gaim_request_input(void *handle, const char *title, const char *primary,
 				   const char *secondary, const char *default_value,
-				   gboolean multiline, gboolean masked,
+				   gboolean multiline, gboolean masked, gchar *hint,
 				   const char *ok_text, GCallback ok_cb,
 				   const char *cancel_text, GCallback cancel_cb,
 				   void *user_data)
@@ -1120,7 +1120,7 @@ gaim_request_input(void *handle, const char *title, const char *primary,
 		info->handle    = handle;
 		info->ui_handle = ops->request_input(title, primary, secondary,
 											 default_value,
-											 multiline, masked,
+											 multiline, masked, hint,
 											 ok_text, ok_cb,
 											 cancel_text, cancel_cb,
 											 user_data);
